--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3997,10 +3997,5 @@ footer {
 	}
 
   }
-
-
-
-
-
-html, body { height: 100%; }
+html, body { height: 100%;scroll-behavior: unset !important; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
