--- a/src/app/general/loader/loader.component.scss
+++ b/src/app/general/loader/loader.component.scss
@@ -11,7 +11,8 @@
     border-top: 16px solid #3498db;
     width: 120px;
     height: 120px;
-    animation: spin 1s linear infinite;
+   // animation: spin 1s linear infinite;
+   background-color: #3498db;
     }
         
     @keyframes spin {
