--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,8 +22,8 @@
       <div class = "col-md-6">
         <div class = "sec1-col2">
           <h2>{{home?.ourstorytitle1}}</h2>
-          <div class = "py-3 mb-0" innerHTML="{{home.ourstorydescripation}}"></div>
-          <button type = "button" class = "btn blue-btn" routerLink = "{{home.ourstorybuttonlink}}">{{home?.ourstorybuttonname}}</button>
+          <div class = "py-3 mb-0" innerHTML="{{home?.ourstorydescripation}}"></div>
+          <button type = "button" class = "btn blue-btn" routerLink = "{{home?.ourstorybuttonlink}}">{{home?.ourstorybuttonname}}</button>
         </div>
       </div>
     </div>
@@ -43,9 +43,9 @@
 <section id = "section3">
   <div class = "container">
     <div class = "box">
-      <h2>{{home.oursuccesstitle}}</h2>
-      <p class = "py-3 mb-0">{{home.oursuccessdescripation}}</p>
-      <button type = "button" class = "btn blue-btn" routerLink="{{home.oursuccessbuttonlink}}">{{home.oursuccessbuttonname}}</button>
+      <h2>{{home?.oursuccesstitle}}</h2>
+      <p class = "py-3 mb-0">{{home?.oursuccessdescripation}}</p>
+      <button type = "button" class = "btn blue-btn" routerLink="{{home?.oursuccessbuttonlink}}">{{home?.oursuccessbuttonname}}</button>
     </div>
   </div>
 </section>
@@ -57,14 +57,14 @@
     <div class = "row ">
       <div class = "col-lg-6 col-12">
         <div class = "sec1-col2">
-          <h2>{{home.meetresolutetitle}}</h2>
-          <p class = "py-3 mb-0">{{home.meetresolutedescripation}}</p>
-          <button type = "button" class = "btn blue-btn" routerLink="{{home.meetresolutebuttonelink}}">{{home.meetresolutebuttonname}}</button>
+          <h2>{{home?.meetresolutetitle}}</h2>
+          <p class = "py-3 mb-0">{{home?.meetresolutedescripation}}</p>
+          <button type = "button" class = "btn blue-btn" routerLink="{{home?.meetresolutebuttonelink}}">{{home?.meetresolutebuttonname}}</button>
         </div>
       </div>
       <div class = "col-lg-6 col-12">
         <div class ="sec4-img">
-          <img src = "{{home.meetresoluteimage}}" width="100%">
+          <img src = "{{home?.meetresoluteimage}}" width="100%">
         </div>
       </div>
     </div>
@@ -76,17 +76,17 @@
 <section id = "section5">
   <div class="container">
     <div>
-      <h2>{{home.rugsAccordancetitle}}</h2>
+      <h2>{{home?.rugsAccordancetitle}}</h2>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="content">
           <a routerLink = "/products">
             <div class="content-overlay"></div>
-            <img class="content-image" src="{{home.rugsproductproductimage1}}">
+            <img class="content-image" src="{{home?.rugsproductproductimage1}}">
             <div class="content-details fadeIn-bottom">
-              <h3 class="content-title">{{home.rugsproducttitle1}}</h3>
-              <a type = "button" class = "btn" routerLink = "{{home.rugsproductproductbuttonlink1}}">{{home.rugsproductbuttonname1}}</a>
+              <h3 class="content-title">{{home?.rugsproducttitle1}}</h3>
+              <a type = "button" class = "btn" routerLink = "{{home?.rugsproductproductbuttonlink1}}">{{home?.rugsproductbuttonname1}}</a>
             </div>
           </a>
         </div>
@@ -95,10 +95,10 @@
         <div class="content">
           <a routerLink = "/products">
             <div class="content-overlay"></div>
-            <img class="content-image" src="{{home.rugsproductproductimage2}}">
+            <img class="content-image" src="{{home?.rugsproductproductimage2}}">
             <div class="content-details fadeIn-bottom">
-              <h3 class="content-title">{{home.rugsproducttitle2}}</h3>
-              <a type = "button" class = "btn" routerLink = "{{home.rugsproductproductbuttonlink2}}">{{home.rugsproductbuttonname2}}</a>
+              <h3 class="content-title">{{home?.rugsproducttitle2}}</h3>
+              <a type = "button" class = "btn" routerLink = "{{home?.rugsproductproductbuttonlink2}}">{{home?.rugsproductbuttonname2}}</a>
             </div>
           </a>
         </div>
@@ -107,10 +107,10 @@
         <div class="content ">
           <a routerLink = "/products">
             <div class="content-overlay "></div>
-            <img class="content-image " src="{{home.rugsproductproductimage3}}">
+            <img class="content-image " src="{{home?.rugsproductproductimage3}}">
             <div class="content-details fadeIn-bottom">
-              <h3 class="content-title">{{home.rugsproducttitle3}}</h3>
-              <a type = "button" class = "btn" routerLink = "{{home.rugsproductproductbuttonlink3}}">{{home.rugsproductbuttonname3}}</a>
+              <h3 class="content-title">{{home?.rugsproducttitle3}}</h3>
+              <a type = "button" class = "btn" routerLink = "{{home?.rugsproductproductbuttonlink3}}">{{home?.rugsproductbuttonname3}}</a>
             </div>
           </a>
         </div>
@@ -119,10 +119,10 @@
         <div class="content">
           <a routerLink = "/products">
             <div class="content-overlay"></div>
-            <img class="content-image" src="{{home.rugsproductproductimage4}}">
+            <img class="content-image" src="{{home?.rugsproductproductimage4}}">
             <div class="content-details fadeIn-bottom">
-              <h3 class="content-title">{{home.rugsproducttitle4}}</h3>
-              <a type = "button" class = "btn" routerLink = "{{home.rugsproductproductbuttonlink4}}">{{home.rugsproductbuttonname3}}</a>
+              <h3 class="content-title">{{home?.rugsproducttitle4}}</h3>
+              <a type = "button" class = "btn" routerLink = "{{home?.rugsproductproductbuttonlink4}}">{{home?.rugsproductbuttonname3}}</a>
             </div>
           </a>
         </div>
@@ -142,21 +142,21 @@
         <div class = "row">
           <div class = "col-lg-6 col-12">
             <div class="hover-effect">
-              <img src="{{home.flatimage1}}" alt="images">
+              <img src="{{home?.flatimage1}}" alt="images">
              </div>
           </div>
           <div class = "col-lg-6 col-12">
             <div class="hover-effect">
-              <img src="{{home.flatimage2}}" alt="images">
+              <img src="{{home?.flatimage2}}" alt="images">
               </div>
           </div>
         </div>
       </div>
       <div class = "col-lg-4 col-12">
         <div>
-          <h2>{{home.flattitle}}</h2>
-          <p class = "py-3 mb-0">{{home.flatdesctipation}}</p>
-          <button type = "button" class = "btn blue-btn" routerLink="{{home.flatbuttonlink}}">{{home.flatbuttonname}}</button>
+          <h2>{{home?.flattitle}}</h2>
+          <p class = "py-3 mb-0">{{home?.flatdesctipation}}</p>
+          <button type = "button" class = "btn blue-btn" routerLink="{{home?.flatbuttonlink}}">{{home?.flatbuttonname}}</button>
         </div>
       </div>
     </div>
@@ -170,9 +170,9 @@
     <div class="row">
       <div class="col-lg-6 col-12">
         <div class="col-left">
-          <h2>{{home.collectiontitle}}</h2>
-          <p class="py-3">{{home.collectiondescripation}}</p>
-          <button type="button" class = "btn blue-btn">{{home.collectionbuttonname}}</button>
+          <h2>{{home?.collectiontitle}}</h2>
+          <p class="py-3">{{home?.collectiondescripation}}</p>
+          <button type="button" class = "btn blue-btn">{{home?.collectionbuttonname}}</button>
         </div>
       </div>
       <div class="col-lg-6 col-12">
