--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,5 @@
 <!----------Breadcrumb Starts---------->
+<app-loader></app-loader>
 <section class="py-2 breadcrumb_section">
   <div class="container">
     <div aria-label="breadcrumb" class="breadcrumbs large-font">
